application/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: application
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "static-ip"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "Domain" # Replace with your host/domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keeper-lb
                port:
                  number: 80

  defaultBackend:
    service:
      name: nginx-lb
      port:
        number: 80
